fix radius on notify me, extra padding left-right

--- a/less-files/header-23.less
+++ b/less-files/header-23.less
@@ -47,7 +47,9 @@
         font-family: @Montserrat;
         font-size: 12px; 
         border-width: 0px;
-        .border-radius(0px 10px 10px 0px);
+        .border-radius(0px 6px 6px 0px);
+        padding-left: 35px;
+        padding-right: 35px;
         @media (max-width: @screen-sm-min) {
           width: 100%;
         }
